sys/c-include/quickjs-internals.h

typedef enum JSErrorEnum {
  JS_EVAL_ERROR,
  JS_RANGE_ERROR,
  JS_REFERENCE_ERROR,
  JS_SYNTAX_ERROR,
  JS_TYPE_ERROR,
  JS_URI_ERROR,
  JS_INTERNAL_ERROR,
  JS_AGGREGATE_ERROR,
  JS_NATIVE_ERROR_COUNT, 
} JSErrorEnum;
typedef struct JSShape JSShape;
typedef struct JSString JSAtomStruct;
enum OPCodeEnum {
#define FMT(f)
#define DEF(id, size, n_pop, n_push, f) OP_##id,
#define def(id, size, n_pop, n_push, f)
#include "quickjs-opcode.h"
#undef def
#undef DEF
#undef FMT
  OP_COUNT, 
  OP_TEMP_START = OP_nop + 1,
  OP___dummy = OP_TEMP_START - 1,
#define FMT(f)
#define DEF(id, size, n_pop, n_push, f)
#define def(id, size, n_pop, n_push, f) OP_##id,
#include "quickjs-opcode.h"
#undef def
#undef DEF
#undef FMT
  OP_TEMP_END,
};
typedef enum {
  JS_GC_PHASE_NONE,
  JS_GC_PHASE_DECREF,
  JS_GC_PHASE_REMOVE_CYCLES,
} JSGCPhaseEnum;
typedef struct {
  JSValue (*to_string)(JSContext *ctx, JSValueConst val);
  JSValue (*from_string)(JSContext *ctx, const char *buf, int radix, int flags,
                         slimb_t *pexponent);
  int (*unary_arith)(JSContext *ctx, JSValue *pres, enum OPCodeEnum op,
                     JSValue op1);
  int (*binary_arith)(JSContext *ctx, enum OPCodeEnum op, JSValue *pres,
                      JSValue op1, JSValue op2);
  int (*compare)(JSContext *ctx, enum OPCodeEnum op, JSValue op1, JSValue op2);
  JSValue (*mul_pow10_to_float64)(JSContext *ctx, const bf_t *a,
                                  int64_t exponent);
  int (*mul_pow10)(JSContext *ctx, JSValue *sp);
} JSNumericOperations;
struct JSRuntime {
  JSMallocFunctions mf;
  JSMallocState malloc_state;
  const char *rt_info;
  int atom_hash_size; 
  int atom_count;
  int atom_size;
  int atom_count_resize; 
  uint32_t *atom_hash;
  JSAtomStruct **atom_array;
  int atom_free_index; 
  int class_count; 
  JSClass *class_array;
  struct list_head context_list; 
  struct list_head gc_obj_list;
  struct list_head gc_zero_ref_count_list;
  struct list_head tmp_obj_list; 
  JSGCPhaseEnum gc_phase : 8;
  size_t malloc_gc_threshold;
#ifdef DUMP_LEAKS
  struct list_head string_list; 
#endif
  uintptr_t stack_size; 
  uintptr_t stack_top;
  uintptr_t stack_limit; 
  JSValue current_exception;
  BOOL in_out_of_memory : 8;
  struct JSStackFrame *current_stack_frame;
  JSInterruptHandler *interrupt_handler;
  void *interrupt_opaque;
  JSHostPromiseRejectionTracker *host_promise_rejection_tracker;
  void *host_promise_rejection_tracker_opaque;
  struct list_head job_list; 
  JSModuleNormalizeFunc *module_normalize_func;
  JSModuleLoaderFunc *module_loader_func;
  void *module_loader_opaque;
  BOOL can_block : 8; 
  JSSharedArrayBufferFunctions sab_funcs;
  int shape_hash_bits;
  int shape_hash_size;
  int shape_hash_count; 
  JSShape **shape_hash;
#ifdef CONFIG_BIGNUM
  bf_context_t bf_ctx;
  JSNumericOperations bigint_ops;
  JSNumericOperations bigfloat_ops;
  JSNumericOperations bigdecimal_ops;
  uint32_t operator_count;
#endif
  void *user_opaque;
};
struct JSClass {
  uint32_t class_id; 
  JSAtom class_name;
  JSClassFinalizer *finalizer;
  JSClassGCMark *gc_mark;
  JSClassCall *call;
  const JSClassExoticMethods *exotic;
};
typedef struct JSStackFrame {
  struct JSStackFrame *prev_frame; 
  JSValue
      cur_func; 
  JSValue *arg_buf;              
  JSValue *var_buf;              
  struct list_head var_ref_list; 
  const uint8_t *cur_pc;         
  int arg_count;
  int js_mode; 
  JSValue *cur_sp;
} JSStackFrame;
struct JSGCObjectHeader {
  int ref_count; 
  JSGCObjectTypeEnum gc_obj_type : 4;
  uint8_t mark : 4; 
  uint8_t dummy1;   
  uint16_t dummy2;  
  struct list_head link;
};
typedef struct JSFloatEnv {
  limb_t prec;
  bf_flags_t flags;
  unsigned int status;
} JSFloatEnv;
struct JSContext {
  JSGCObjectHeader header; 
  JSRuntime *rt;
  struct list_head link;
  uint16_t binary_object_count;
  int binary_object_size;
  JSShape *array_shape; 
  JSValue *class_proto;
  JSValue function_proto;
  JSValue function_ctor;
  JSValue array_ctor;
  JSValue regexp_ctor;
  JSValue promise_ctor;
  JSValue native_error_proto[JS_NATIVE_ERROR_COUNT];
  JSValue iterator_proto;
  JSValue async_iterator_proto;
  JSValue array_proto_values;
  JSValue throw_type_error;
  JSValue eval_obj;
  JSValue global_obj;     
  JSValue global_var_obj; 
  uint64_t random_state;
#ifdef CONFIG_BIGNUM
  bf_context_t *bf_ctx; 
  JSFloatEnv fp_env;    
  BOOL bignum_ext : 8;  
  BOOL allow_operator_overloading : 8;
#endif
  int interrupt_counter;
  BOOL is_error_property_enabled;
  struct list_head loaded_modules; 
  JSValue (*compile_regexp)(JSContext *ctx, JSValueConst pattern,
                            JSValueConst flags);
  JSValue (*eval_internal)(JSContext *ctx, JSValueConst this_obj,
                           const char *input, size_t input_len,
                           const char *filename, int flags, int scope_idx);
  void *user_opaque;
};
typedef struct JSReqModuleEntry {
  JSAtom module_name;
  JSModuleDef *module; 
} JSReqModuleEntry;
typedef struct JSExportEntry {
  union {
    struct {
      int var_idx;       
      JSVarRef *var_ref; 
    } local;             
    int req_module_idx;  
  } u;
  JSExportTypeEnum export_type;
  JSAtom local_name;  
  JSAtom export_name; 
} JSExportEntry;
typedef struct JSStarExportEntry {
  int req_module_idx; 
} JSStarExportEntry;
typedef struct JSImportEntry {
  int var_idx; 
  JSAtom import_name;
  int req_module_idx; 
} JSImportEntry;
struct JSModuleDef {
  JSRefCountHeader header; 
  JSAtom module_name;
  struct list_head link;
  JSReqModuleEntry *req_module_entries;
  int req_module_entries_count;
  int req_module_entries_size;
  JSExportEntry *export_entries;
  int export_entries_count;
  int export_entries_size;
  JSStarExportEntry *star_export_entries;
  int star_export_entries_count;
  int star_export_entries_size;
  JSImportEntry *import_entries;
  int import_entries_count;
  int import_entries_size;
  JSValue module_ns;
  JSValue func_obj;            
  JSModuleInitFunc *init_func; 
  BOOL resolved : 8;
  BOOL func_created : 8;
  BOOL instantiated : 8;
  BOOL evaluated : 8;
  BOOL eval_mark : 8; 
  BOOL eval_has_exception : 8;
  JSValue eval_exception;
  JSValue meta_obj; 
};
struct JSShape {
  JSGCObjectHeader header;
  uint8_t is_hashed;
  uint8_t has_small_array_index;
  uint32_t hash; 
  uint32_t prop_hash_mask;
  int prop_size;  
  int prop_count; 
  int deleted_prop_count;
  JSShape *shape_hash_next; 
  JSObject *proto;
  JSShapeProperty prop[0]; 
};
typedef enum OPCodeFormat {
#define FMT(f) OP_FMT_##f,
#define DEF(id, size, n_pop, n_push, f)
#include "quickjs-opcode.h"
#undef DEF
#undef FMT
} OPCodeFormat;